--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
-    "@appandflow/masonry-list": "file:../",
+    "js-masonry-list": "file:../",
     "expo": "^17.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-17.0.0.tar.gz"
