--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "js-masonry-list",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "main": "./src/MasonryList.js",
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/AppAndFlow/react-native-masonry-list.git"
+    "url": "https://github.com/JustinXu0223/react-native-masonry-list.git"
   },
   "bugs": {
-    "url": "https://github.com/AppAndFlow/react-native-masonry-list.git/issues"
+    "url": "https://github.com/JustinXu0223/react-native-masonry-list.git/issues"
   },
   "keywords": [
     "react-native",
-    "appandflow",
     "masonry",
     "list"
   ],
-  "author": "AppAndFlow",
+  "author": "AppAndFlow && JustinXu",
   "license": "MIT",
   "files": [
     "/src"
